@@ -27,6 +27,8 @@ Iceland, London, Mexico, Miami, Monaco, New Orleans, San Francisco (this was
 the one already on No Name Games), Saint Petersburg, Winter Holiday, and
 Zurich
 [+] Added Five Nights at Freddy's: Sister Location
+[+] Added Five Nights at Freddy's: Ultimate Custom Night (Thanks for the 
+suggestion Mm)
 
 12/13/2025:
 [+] Added The Deadseat (Thanks for the suggestion Muffet<3)
